--- a/public/css/styles-5.css
+++ b/public/css/styles-5.css
@@ -278,6 +278,9 @@ blink {
   box-shadow: 0 0 0 1px rgb(253, 219, 129);
   color: rgb(57, 55, 43) !important;
 }
+.custom-file-label {
+  color: #fab702 !important;
+}
 #copy-text,
 .lesnar {
   background: rgb(254, 237, 1) !important;
