--- a/public/css/styles-8.css
+++ b/public/css/styles-8.css
@@ -280,6 +280,9 @@ blink {
   box-shadow: 0 0 0 1px rgb(139, 208, 195);
   color: rgb(19, 51, 65) !important;
 }
+.custom-file-label {
+  color: #16a086 !important;
+}
 #copy-text,
 .lesnar {
   background: rgb(197, 231, 34) !important;
