--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -309,6 +309,9 @@ blink {
   box-shadow: 0 0 0 1px rgb(195, 222, 161);
   color: rgb(37, 56, 54) !important;
 }
+.custom-file-label {
+  color: #86bc42 !important;
+}
 #copy-text,
 .lesnar {
   background: rgb(225, 238, 17) !important;
