--- a/public/css/plugins/apps.css
+++ b/public/css/plugins/apps.css
@@ -2591,11 +2591,8 @@ margin-bottom: 2px !important;
 .clients img:hover {
   opacity: 1;
 }
-#modal-cat {
-  background: rgba(18, 29, 51, 0.01) !important;
-  padding: 10px 0 !important;
-  border: none !important;
-  box-shadow: 20px 20px 21px 30px rgba(18, 29, 51, 0.3) !important;
+#clients {
+  padding: 3.5px 0 !important;
 }
 #label-date img {
   width: 25px !important;
