--- a/public/css/plugins/index.css
+++ b/public/css/plugins/index.css
@@ -12,6 +12,12 @@
         max-width: 68%;
     }  
 
+    .col-lg-75 {
+        -ms-flex:0 0 57%;
+        flex:0 0 57%;
+        max-width: 57%;
+    }
+
     .col-lg-45 {
         -ms-flex:0 0 32%;
         flex:0 0 32%;
