--- a/public/css/plugins/apps.css
+++ b/public/css/plugins/apps.css
@@ -2400,8 +2400,8 @@ ul.countdown li p {
 #email-p,
 #anon-p {
   text-align: center !important;
-  font-size: 20.5px !important;
-  line-height: 58px !important;
+  font-size: 21px !important;
+  line-height: 60px !important;
 }
 
 
@@ -2411,14 +2411,6 @@ ul.countdown li p {
 .modal-p span {
   color: yellow !important;
 }
-#dave-1, 
-#dave-2,
-#save-1, 
-#save-2 {
-  font-size: 21.2px !important;
-  line-height: 62px !important;
-  text-align: center !important;
-}
 
 #save-2 {
   margin-bottom: 8.5px !important;
@@ -2426,13 +2418,6 @@ ul.countdown li p {
 
 
 @media screen and (min-width: 1370px) {
-  #dave-1,
-  #dave-2,
-  #save-1, 
-  #save-2 {
-      font-size: 22px !important;
-      line-height: 64px !important;
-  }
   #usage-p,
   #email-p,
   #anon-p {
@@ -2445,25 +2430,22 @@ ul.countdown li p {
   .modal-p {
       font-size: 18px !important;
   }
-  #dave-1,
-  #dave-2,
-  #save-1, 
-  #save-2 {
-      font-size: 20.2px !important;
-      line-height: 59.5px !important;
-  }
 
   #usage-p,
   #email-p,
   #anon-p {
       text-align: center !important;
-      font-size: 19.5px !important;
-      line-height: 58px !important;
+      font-size: 20px !important;
+      line-height: 60px !important;
   }
 }
 
+#anon-p {
+  margin-bottom: -7px !important;
+}
+
 #usage-p {
-  margin-bottom: -15px !important;
+  margin-bottom: -20px !important;
 }
  
 .thehr {
@@ -2473,29 +2455,11 @@ ul.countdown li p {
   .modal-p {
       font-size: 17.5px !important;
   }
-  #dave-1,
-  #dave-2,
-  #save-1, 
-  #save-2 {
-      font-size: 19.7px !important;
-      line-height: 57px !important;
-  }
 }
 @media screen and (max-width: 380px) {
   .modal-p {
       font-size: 17.3px !important;
   }
-  #dave-1,
-  #dave-2,
-  #save-1, 
-  #save-2 {
-      font-size: 19.2px !important;
-      line-height: 54px !important;
-  }
-}
-#save-1, 
-#save-2 {
-  letter-spacing: 0.7px !important;
 }
 @media screen and (max-width: 374px) {
   .modal-p {
