--- a/public/css/plugins/downloadw.css
+++ b/public/css/plugins/downloadw.css
@@ -960,3 +960,14 @@ hr.hr-2 {
 }
 
 
+
+
+#tiket,
+#showtoasts {
+  text-transform: capitalize !important;
+  font-size: 28px !important;
+  padding: 14px !important;
+  letter-spacing: 1.8px !important;
+  font-weight: 700 !important;
+  box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.85) !important;
+}
