--- a/public/css/plugins/index.css
+++ b/public/css/plugins/index.css
@@ -29,26 +29,26 @@
     width: 100% !important;
 }
 #invoice-div {
-    margin-top: 1vh;
+    margin-top: 12vh;
 }
 @media screen and (min-width: 1370px) {
     #invoice-div {
-        margin-top: 3vh;
+        margin-top: 14vh;
     }
 }
 @media screen and (max-width: 821px) {
     #invoice-div {
-        margin-top: 7vh;
+        margin-top: 16vh;
     }
 }
 @media screen and (max-width: 500px) {
     #invoice-div {
-        margin-top: 5vh;
+        margin-top: 13vh;
     }
 }
 @media screen and (max-width: 400px) {
     #invoice-div {
-        margin-top: 3vh;
+        margin-top: 11vh;
     }
 }
 
@@ -219,8 +219,12 @@
         letter-spacing: 1.5px !important;  
     }
 
-    #section-index {
+    /* #section-index {
         margin-top: 30px !important;
+    } */
+    #clients {
+        position: fixed !important;
+        bottom: 3px !important;
     }
 }
 
@@ -228,9 +232,4 @@
 #logo {
     border: none !important;
     border-radius: 0 !important;
-}
-
-#clients {
-    position: fixed !important;
-    bottom: 3px !important;
 }
