--- a/public/css/plugins/login.css
+++ b/public/css/plugins/login.css
@@ -8,6 +8,12 @@
     padding: 0px 10px !important;
     height: 100vh !important;
 }
+@media screen and (max-width: 821px) {
+    #logs-invoice {
+        padding: 0px 10px !important;
+        height: 92vh !important;
+    }
+}
 #logs-invoice div {
     overflow: hidden !important;
 }
@@ -23,26 +29,26 @@
     width: 100% !important;
 }
 #invoice-div {
-    margin-top: 12vh;
+    margin-top: 1vh;
 }
 @media screen and (min-width: 1370px) {
     #invoice-div {
-        margin-top: 14vh;
+        margin-top: 3vh;
     }
 }
 @media screen and (max-width: 821px) {
     #invoice-div {
-        margin-top: 16vh;
+        margin-top: 7vh;
     }
 }
 @media screen and (max-width: 500px) {
     #invoice-div {
-        margin-top: 12vh;
+        margin-top: 5vh;
     }
 }
 @media screen and (max-width: 400px) {
     #invoice-div {
-        margin-top: 10vh;
+        margin-top: 3vh;
     }
 }
 
@@ -63,15 +69,15 @@
 }
 @media screen and (max-width: 574px) {
     #invoice-div p {
-        font-size: 20.7px !important;
-        line-height: 63px !important;
+        font-size: 20.8px !important;
+        line-height: 64px !important;
     }
 }
 
 @media screen and (max-width: 380px) {
     #invoice-div p {
         font-size: 20.2px !important;
-        line-height: 60px !important;
+        line-height: 61px !important;
     }
 }
 
@@ -212,13 +218,8 @@
         font-size: 24px !important;
         letter-spacing: 1.5px !important;  
     }
-
-    /* #section-index {
+    #section-index {
         margin-top: 30px !important;
-    } */
-    #clients {
-        position: fixed !important;
-        bottom: 3px !important;
     }
 }
 
@@ -226,4 +227,9 @@
 #logo {
     border: none !important;
     border-radius: 0 !important;
+}
+
+#clients {
+    position: fixed !important;
+    bottom: 3px !important;
 }
