--- a/public/css/plugins/email.css
+++ b/public/css/plugins/email.css
@@ -11,11 +11,13 @@
     width: 100% !important;
 }
 #invoice-div {
-    margin-top: 1vh;
+    margin-top: 0vh;
+    margin-bottom: 2vh;
 }
 @media screen and (min-width: 1370px) {
     #invoice-div {
         margin-top: 3vh;
+        margin-bottom: 3vh;
     }
 }
 @media screen and (max-width: 821px) {
@@ -47,14 +49,14 @@
 }
 @media screen and (max-width: 574px) {
     #invoice-div p {
-        font-size: 21px !important;
-        line-height: 62px !important;
+        font-size: 21.5px !important;
+        line-height: 63px !important;
     }
 }
 
-@media screen and (max-width: 380px) {
+@media screen and (max-width: 400px) {
     #invoice-div p {
-        font-size: 20.5px !important;
+        font-size: 21px !important;
         line-height: 60px !important;
     }
 }
@@ -73,9 +75,12 @@
 }
 @media (min-width: 802px) {
 	#invoice-div.col-lg-5 {
-		-ms-flex: 0 0 31%;
-		flex: 0 0 31%;
-		max-width: 31%;
+		-ms-flex: 0 0 29%;
+		flex: 0 0 29%;
+		max-width: 29%;
+   }
+   #log-voice.col-lg-2 {
+    margin-top: 7vh !important;
    }
 }
 @media (max-width: 500px)  {
@@ -156,7 +161,7 @@
     display: flex !important;
     width: 91% !important;
     height: 58px !important;
-    margin: 10px auto -10px !important;
+    margin: 10px auto 0px !important;
   
     background: rgba(255, 255, 255, 0.7) !important;
     box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.7) !important;
@@ -174,8 +179,8 @@
 
 
 #email-phone {
-  margin-top: 20px !important;
-  margin-bottom: 10px !important;
+  margin-top: 15px !important;
+  margin-bottom: 5px !important;
   cursor: pointer !important;
   padding: 9px 13px !important;
   font-size: 25px !important;
