--- a/public/css/plugins/email.css
+++ b/public/css/plugins/email.css
@@ -66,11 +66,15 @@
 }
 
 
-#invoice-body-div {
+#voice-body-div {
+    display: flex;
+    justify-content: center;
+    margin: 5px 0;
+    
     margin: 3px !important;
     background: rgba(255, 255, 255, 0.7) !important;
 }
-#invoice-body-div p {
+#voice-body-div p {
     font-weight: 500 !important;
 }
 @media (min-width: 802px) {
