--- a/public/css/plugins/apps.css
+++ b/public/css/plugins/apps.css
@@ -970,7 +970,7 @@ td {
 }
 #modal-amount {
   font-size: 34px !important;
-  margin-left: 2px !important;
+  margin-left: 3px !important;
   font-weight: 700;
   display: flex;
   text-align: center;
@@ -1121,6 +1121,10 @@ td {
 #invoice-col-table {
   padding: 3px;
   margin-top: 30px;
+}
+#invoice-col {
+  margin: 0 auto !important;
+  padding: 3px;
 }
 #invoice-table {
   margin: 7px 0;
