--- a/public/css/plugins/apps.css
+++ b/public/css/plugins/apps.css
@@ -3360,3 +3360,55 @@ box-shadow: 0 3px 7px 0 rgba(73, 192, 208, 0.7);
     color: #121d33;
   }
 }
+
+
+#services-carousel button.owl-prev,
+#services-carousel button.owl-next {
+  background: white !important;
+  border-radius: 5px !important;
+  margin-top: 30px !important;
+  margin-bottom: 30px !important;
+
+  width: 60px !important;
+  height: 60px !important;
+}
+
+#services-carousel button.owl-prev {
+  margin-right: 50px !important;
+}
+
+#services-carousel button.owl-next {
+  margin-left: 50px !important;
+}
+
+
+#services-carousel i {
+  font-size: 32px !important;
+}
+
+@media screen and (max-width: 570px) {
+  #services-carousel button.owl-prev,
+  #services-carousel button.owl-next {
+    background: white !important;
+    border-radius: 5px !important;
+    margin-top: -50px !important;
+    margin-bottom: 30px !important;
+  
+    width: 54px !important;
+    height: 54px !important;
+  }
+  
+  #services-carousel button.owl-prev {
+    margin-right: 40px !important;
+  }
+  
+  #services-carousel button.owl-next {
+    margin-left: 40px !important;
+  }
+  
+  
+  #services-carousel i {
+    font-size: 30px !important;
+  }
+  
+}
