--- a/public/css/styles-2.css
+++ b/public/css/styles-2.css
@@ -486,3 +486,7 @@ span#mail-span {
   border: 1.4px solid rgba(3, 169, 245, 0.7) !important;
   box-shadow: 0px 5px 10px 0px rgba(3, 169, 245, 0.3);
 }
+#services-carousel button.owl-prev,
+#services-carousel button.owl-next {
+  border: 2.1px solid #03a9f5 !important;
+}
