--- a/public/css/styles-3.css
+++ b/public/css/styles-3.css
@@ -487,3 +487,7 @@ span#mail-span {
   border: 1.4px solid rgba(0, 115, 173, 0.7) !important;
   box-shadow: 0px 5px 10px 0px rgba(0, 115, 173, 0.3);
 }
+#services-carousel button.owl-prev,
+#services-carousel button.owl-next {
+  border: 2.1px solid #0073ad !important;
+}
