--- a/public/css/styles-4.css
+++ b/public/css/styles-4.css
@@ -492,3 +492,7 @@ span#mail-span {
   border: 1.4px solid rgba(71, 88, 143, 0.7) !important;
   box-shadow: 0px 5px 10px 0px rgba(71, 88, 143, 0.3);
 }
+#services-carousel button.owl-prev,
+#services-carousel button.owl-next {
+  border: 2.1px solid #47588f !important;
+}
