--- a/public/css/styles-5.css
+++ b/public/css/styles-5.css
@@ -489,3 +489,7 @@ span#mail-span {
   border: 1.4px solid rgba(250, 183, 2, 0.7) !important;
   box-shadow: 0px 5px 10px 0px rgba(250, 183, 2, 0.3);
 }
+#services-carousel button.owl-prev,
+#services-carousel button.owl-next {
+  border: 2.1px solid #fab702 !important;
+}
