--- a/public/css/styles-7.css
+++ b/public/css/styles-7.css
@@ -481,3 +481,7 @@ span#mail-span {
   border: 1.4px solid rgba(73, 192, 208, 0.7) !important;
   box-shadow: 0px 5px 10px 0px rgba(73, 192, 208, 0.3);
 }
+#services-carousel button.owl-prev,
+#services-carousel button.owl-next {
+  border: 2.1px solid #49c0d0 !important;
+}
