--- a/public/css/styles-8.css
+++ b/public/css/styles-8.css
@@ -484,3 +484,7 @@ span#mail-span {
   border: 1.4px solid rgba(22, 160, 134, 0.7) !important;
   box-shadow: 0px 5px 10px 0px rgba(22, 160, 134, 0.3);
 }
+#services-carousel button.owl-prev,
+#services-carousel button.owl-next {
+  border: 2.1px solid #16a086 !important;
+}
