--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -485,3 +485,8 @@ span#mail-span {
   border: 1.4px solid rgba(134, 188, 66, 0.7) !important;
   box-shadow: 0px 5px 10px 0px rgba(134, 188, 66, 0.3);
 }
+
+#services-carousel button.owl-prev,
+#services-carousel button.owl-next {
+  border: 2.1px solid #86bc42 !important;
+}
