--- a/public/css/plugins/index.css
+++ b/public/css/plugins/index.css
@@ -1,217 +1,62 @@
+
+@media screen and (max-width: 1026px) {
+    .col-12 {
+        margin-bottom: 21px;
+    }
+}
+.thecont{
+	margin-top: 90px;
+    margin-bottom: 0;
+}
+.therow {
+	margin: 5px -0;
+}
+
+
+
 .bg-animate{
     background-position:0 0;
     background-repeat:repeat-x;
-    animation:animatedBackground 70s linear infinite 
+    animation:animatedBackground 140s linear infinite
 }
-#logs-invoice {
-    padding: 0px  10px !important;
-    height: 100vh !important;
-}
-#logs-invoice div {
-    overflow: hidden !important;
-}
-
-
-#my-invoice {
-    margin: 3px !important;
-    padding: 0px !important;
-    width: 100% !important;
-}
-#invoice-div {
-    margin-top: 1vh;
-}
-@media screen and (min-width: 1370px) {
-    #invoice-div {
-        margin-top: 3vh;
+@keyframes animatedBackground{
+    from{
+        background-position:0 0
     }
-}
-@media screen and (max-width: 821px) {
-    #invoice-div {
-        margin-top: 16vh;
-    }
-}
-@media screen and (max-width: 570px) {
-    #invoice-div {
-        margin-top: 7vh;
+    to{
+        background-position:100% 0
     }
 }
 
-#invoice-div p {
-    margin: 15px auto !important;
-    font-size: 23px !important;
-    line-height: 65px !important;
-}
-
-@media screen and (min-width: 1370px) {
-    #invoice-div p {
-        font-size: 24px !important;
-        line-height: 68px !important;
-    }
-}
-#invoice-div p span {
-    font-weight: 600;
-}
-@media screen and (max-width: 574px) {
-    #invoice-div p {
-        font-size: 21.5px !important;
-        line-height: 65px !important;
-    }
-}
-
-@media screen and (max-width: 400px) {
-    #invoice-div p {
-        font-size: 21px !important;
-        line-height: 63px !important;
-    }
-}
-
-#my-invoice span {
-    font-weight: 600;
-}
-
-
-#voice-body-div {
-    display: flex;
-    justify-content: center;
-    margin: 5px 0;
-    
-    margin: 3px !important;
-    background: rgba(255, 255, 255, 0.7) !important;
-}
-#voice-body-div p {
-    font-weight: 500 !important;
-}
-@media (min-width: 802px) {
-	#invoice-div.col-lg-5 {
-		-ms-flex: 0 0 33%;
-		flex: 0 0 33%;
-		max-width: 33%;
-   }
-}
-@media (max-width: 500px)  {
-    #invoice-div.col-12 {
-      -ms-flex:0 0 92%;
-      flex:0 0 92%;
-      max-width: 92%;
-    }  
-}
-@media (max-width: 400px)  {
-    #invoice-div.col-12 {
-      -ms-flex:0 0 94%;
-      flex:0 0 94%;
-      max-width: 94%;
-    }  
-}
-
-#my-invoice {
-    border: 5px solid rgba(22, 160, 134, 0.5) !important;
-    background: rgb(19, 42, 60) !important;
-}
   
-#my-invoice p {
-    color: rgb(19, 58, 69) !important;
+
+#bitcoin-logo2 {
+	margin: -10px 0;
+	border-radius: 0 !important;
+}
+
+@media (max-width: 576px) {
+	#bitcoin-logo2 {
+		margin: -7px 0px !important;
+	}
+}
+
+#modalsend .brock {
+	background: rgba(18, 29, 51, 0.5) !important;
 }
 
 
-.nohr {
-    border: 0.7px solid rgba(22, 160, 134, 0.3);
-    padding: 0 !important;
-    margin: 0 !important;
-}
 
-@media screen and (min-width: 1370px) {
-    .nohr {
-        padding: 0 !important;
-        margin: 10px !important;
+.bro-text {
+	opacity: 0 !important;
+}
+.bro-text p {
+    margin-top: 14px !important;
+    font-size: 21px !important;
+}
+@media screen and (max-width: 506px) {
+    .bro-text p {
+        font-size: 18px !important;
+        margin-top: 14px !important;
     }
-}
-
-.confirm-div {
-    cursor: pointer !important;
-    display: inline-block !important;
-}
-#inputLife {
-  border-radius: 0.1px !important;
-  font-weight: 600 !important;
-  text-align: center;
-  width: 99% !important;
-
-  padding: 0 12px !important;
-  height: 93.5% !important;
-  margin: auto auto !important;
-  letter-spacing: 2.2px !important;
-  align-items: center !important;
-  font-size: 24px !important;
-  box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.7) !important;
-}
-#inputLife::placeholder {
-  letter-spacing: 1.1px !important;
-}
-
-@media screen and (max-width: 767px) {
-  #inputLife::placeholder {
-      letter-spacing: 0.7px !important;
-  }
-  #inputLife {
-      padding: 0 7px !important;
-      letter-spacing: 2px !important;
-      align-items: center !important;
-      font-size: 22.5px !important;
-      height: 95% !important;
-  }
-}
-
-
-#the-life {
-    display: flex !important;
-    width: 91% !important;
-    height: 58px !important;
-    margin: 10px auto -10px !important;
-  
-    background: rgba(255, 255, 255, 0.7) !important;
-    box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.7) !important;
-    border-radius: 0.3px !important;
-  }
-
-  p#wild, 
-  p#would {
-    color: lightcyan !important;
-  }
-
-  span#in-span {
-    color: rgb(139, 209, 68) !important;
-  }
-
-
-#email-phone {
-  margin-top: 20px !important;
-  margin-bottom: 10px !important;
-  cursor: pointer !important;
-  padding: 9px 13px !important;
-  font-size: 25px !important;
-  letter-spacing: 1.8px !important;
-}
-#email-phone img {
-    border-radius: 0 !important;
-    height: 33px !important;
-    width: 33px !important;
-}
-
-@media screen and (max-width: 767px) {
-    #email-phone {
-        margin-top: 20px !important;
-        margin-bottom: 10px !important;
-        cursor: pointer !important;
-        padding: 8px 12px !important;
-        font-size: 24px !important;
-        letter-spacing: 1.5px !important;  
-    }
-    #section-index {
-        margin-top: 30px !important;
-        opacity: 0.7 !important;
-    }
-}
-#clients {
-    position: fixed !important;
-    bottom: 3px !important;
 }
