--- a/public/css/plugins/login.css
+++ b/public/css/plugins/login.css
@@ -207,10 +207,10 @@
         font-size: 24px !important;
         letter-spacing: 1.5px !important;  
     }
-    #section-index {
+    /* #section-index {
         margin-top: 30px !important;
         opacity: 0.7 !important;
-    }
+    } */
 
     #clients {
         position: fixed !important;
