--- a/public/css/plugins/apps.css
+++ b/public/css/plugins/apps.css
@@ -147,18 +147,18 @@
 }
 .gallery .butn {
   letter-spacing: 1.6px !important;
-  margin: 7px auto !important;
-  padding: 7px 13.5px 7px 11.5px !important;
-  font-size: 19px !important;
-  box-shadow: 0 0 0 1.4px rgba(255, 255, 255, 0.85) !important;
+  margin: 8px auto !important;
+  padding: 8px 10px 8px 9px !important;
+  font-size: 21px !important;
+  box-shadow: 0 0 0 1.6px rgba(255, 255, 255, 0.85) !important;
 }
 @media screen and (max-width: 766px) {
   .gallery .butn {
-    letter-spacing: 1.55px !important;
-    margin: 5px auto !important;
-    padding: 6.5px 13px 6.5px 11px !important;
-    font-size: 18.3px !important;
-    box-shadow: 0 0 0 1.3px rgba(255, 255, 255, 0.85) !important;
+    letter-spacing: 1.4px !important;
+    margin: 7px auto !important;
+    padding: 7px 9px 7px 8px !important;
+    font-size: 19px !important;
+    box-shadow: 0 0 0 1.4px rgba(255, 255, 255, 0.85) !important;
   }
 }
 .gallery .col-lg-3 {
@@ -166,13 +166,13 @@
 }
 
 .butn img {
-  width: 25px !important;
-  height: 25px !important;
+  width: 24.5px !important;
+  height: 24.5px !important;
   margin-top: -12px !important;
   margin-bottom: -10px !important;
-  margin-left: 1.4px !important;
-  opacity: 0.85 !important;
-  border-radius: 50% !important;
+  margin-left: 1px !important;
+  opacity: 0.7 !important;
+  border-radius: 13px !important;
 }
 .butn:after {
   content: "";
@@ -1327,7 +1327,7 @@ td {
   text-transform: capitalize !important;
   font-size: 28px !important;
   padding: 14px !important;
-  letter-spacing: 1.7px !important;
+  letter-spacing: 2px !important;
   font-weight: 700 !important;
   box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.85) !important;
 }
@@ -2400,7 +2400,7 @@ ul.countdown li p {
 #anon-p {
   text-align: center !important;
   font-size: 21.5px !important;
-  line-height: 58px !important;
+  line-height: 57px !important;
 }
 #anon-p {
   font-size: 22.5px !important;
@@ -2435,7 +2435,7 @@ ul.countdown li p {
   #anon-p {
       text-align: center !important;
       font-size: 20px !important;
-      line-height: 58px !important;
+      line-height: 57px !important;
   }
   #anon-p {
     font-size: 21px !important;
@@ -2443,11 +2443,11 @@ ul.countdown li p {
 }
 
 #anon-p {
-  margin-bottom: -5px !important;
+  line-height: 80px !important;
 }
 
 #usage-p {
-  margin-bottom: -20px !important;
+  margin-bottom: -18px !important;
 }
  
 .thehr {
