--- a/public/css/plugins/apps.css
+++ b/public/css/plugins/apps.css
@@ -148,14 +148,14 @@
 .gallery .butn {
   letter-spacing: 1.5px !important;
   margin: 7px auto 10px !important;
-  padding: 7.5px 12.5px 7.5px 8.5px !important;
-  font-size: 20.5px !important;
+  padding: 8px 13px 8px 9px !important;
+  font-size: 21px !important;
   box-shadow: 0 0 0 1.5px rgba(255, 255, 255, 0.85) !important;
 }
 @media screen and (max-width: 766px) {
   .gallery .butn {
-    margin: 7px auto 10px !important;
-    padding: 7px 12px 7px 8px !important;
+    margin: 8px auto 10px !important;
+    padding: 7.5px 12px 7.5px 8px !important;
     font-size: 19px !important;
   }
 }
@@ -164,13 +164,13 @@
 }
 
 .butn img {
-  width: 24.5px !important;
-  height: 24.5px !important;
+  width: 30px !important;
+  height: 30px !important;
   margin-top: -12px !important;
   margin-bottom: -10px !important;
   margin-left: 1px !important;
   opacity: 0.7 !important;
-  border-radius: 13px !important;
+  border-radius: 50% !important;
 }
 .butn:after {
   content: "";
@@ -744,13 +744,13 @@ select {
 .pricing-list h2 {
   font-weight: 700;
   letter-spacing: 1px;
-  font-size: 35px;
+  font-size: 37px;
   float: left;
   margin: 0;
   padding: 0;
 }
 .pricing-list h2.text-white {
-  font-size: 35px;
+  font-size: 37px;
   float: left;
   margin: 0;
   padding: 0;
@@ -795,10 +795,10 @@ select {
       margin: 5px -4px;
   }
   .pricing-list-price h2 {
-      font-size: 32px;
+      font-size: 35px;
   }
   .pricing-list-price h2.text-white {
-      font-size: 32px;
+      font-size: 35px;
   }
   .pricing-list ul li {
       font-size: 15px;
@@ -1865,29 +1865,24 @@ td {
   width: 100% !important;
   margin-bottom: -7px !important;
 }
-.filtering .butn {
-  cursor: pointer;
-  font-size: 28px;
-  padding: 10px 5px;
-  margin: 14px 7px;
-}
+.filtering .butn,
 .filtering .butn.white {
   cursor: pointer;
-  font-size: 28px;
-  padding: 10px 5px;
-  margin: 14px 7px;
+  font-size: 30px !important;
+  letter-spacing: 1px !important;
+  padding: 14px 10px !important;
+  border-radius: 1.5px !important;
+  margin: 10px 10px 20px !important;
 }
 .filtering .butn span {
   font-weight: 700 !important;
 }
 @media screen and (max-width: 767px) {
-  .filtering .butn {
-      font-size: 24px;
-      margin: 10px 1px;
-  }
+  .filtering .butn,
   .filtering .butn.white {
-      font-size: 24px;
-      margin: 10px 1px;
+      font-size: 22px !important;
+      margin: 5px 5px 10px !important;
+      padding: 12px 9px !important;
   }
 }
 .filtering .butn:hover {
@@ -1906,16 +1901,15 @@ td {
   margin: -15px -1px -5px !important;
 }
 @media screen and (max-width: 390px) {
-  .filtering .butn {
-      font-size: 21px;
-      margin: 10px 2px;
+  .filtering .butn,
+  .filtering .butn.white {
+      font-size: 21px !important;
+      letter-spacing: 1px !important;
+      margin: 5px 5px 10px !important;
+      padding: 10px 10px !important;
   }
   .filtering img {
-      margin: -15px -5px -5px !important;
-  }
-  .filtering .butn.white {
-      font-size: 21px;
-      margin: 10px 2px;
+    margin: -15px -5px -5px !important;
   }
 }
 @media screen and (max-width: 370px) {
