--- a/public/css/plugins/nav-menu.css
+++ b/public/css/plugins/nav-menu.css
@@ -106,6 +106,7 @@ header.scrollHeader .navbar-default {
   animation-timing-function: ease-in-out;
   color: yellow;
 }
+.fa-wallet,
 .fa-angle-down {
   animation-duration: 1s;
   animation-iteration-count: infinite;
