--- a/public/css/plugins/apps.css
+++ b/public/css/plugins/apps.css
@@ -148,30 +148,35 @@
 .gallery .butn {
   letter-spacing: 2px !important;
   margin: 7px auto 10px !important;
-  padding: 8px 14px 8px 10px !important;
+  padding: 8px 13px 8px 9px !important;
   font-size: 21px !important;
   box-shadow: 0 0 0 1.5px rgba(255, 255, 255, 0.85) !important;
 }
+.butn img {
+  width: 32px !important;
+  height: 32px !important;
+  margin: -12px 1px -10px 3px !important;
+  opacity: 0.75 !important;
+  border-radius: 0 !important;
+}
+
 @media screen and (max-width: 766px) {
   .gallery .butn {
     margin: 8px auto 10px !important;
     padding: 7.5px 12px 7.5px 8px !important;
     font-size: 19px !important;
   }
+
+  .butn img {
+    width: 31px !important;
+    height: 31px !important;
+    margin: -12px 1px -10px 3px !important;
+  }
 }
 .gallery .col-lg-3 {
   margin-bottom: 20px !important;
 }
 
-.butn img {
-  width: 30px !important;
-  height: 30px !important;
-  margin-top: -12px !important;
-  margin-bottom: -10px !important;
-  margin-left: 1px !important;
-  opacity: 0.7 !important;
-  border-radius: 50% !important;
-}
 .gallery .butn i {
   margin: auto 2px auto 5px !important;
   opacity: 1 !important;
@@ -745,16 +750,11 @@ select {
 .pricing-list.highlight {
   padding: 0;
 }
+.pricing-list h2.text-white,
 .pricing-list h2 {
   font-weight: 700;
   letter-spacing: 1px;
   font-size: 38px;
-  float: left;
-  margin: 0;
-  padding: 0;
-}
-.pricing-list h2.text-white {
-  font-size: 37px;
   float: left;
   margin: 0;
   padding: 0;
@@ -804,21 +804,21 @@ select {
       font-size: 36px;
   }
   .pricing-list ul li {
-      font-size: 16px;
+      font-size: 17px;
+      padding: 4.5px 0;
   }
   .pricing-list ul li:nth-child(7) {
       font-size: 16px !important;
   }
 }
-@media (max-width: 380px) {
+@media (max-width: 400px) {
   .pricing-list h2,
   .pricing-list h2.text-white {
-      font-size: 32px;
+      font-size: 34px;
   }
   .pricing-list ul li {
-      font-size: 15px;
-      font-weight: 500;
-      padding: 2px 0;
+      font-size: 16px;
+      padding: 4.5px 0;
   }
   .pricing-list ul li:nth-child(7) {
       font-size: 15px !important;
@@ -826,9 +826,9 @@ select {
 }
 
 .borderp {
-  margin-top: 5px !important;
-  margin-right: 5px !important;
-  width: 47px !important;
+  margin-top: 4px !important;
+  margin-right: 4px !important;
+  width: 49px !important;
   float: right;
 }
 @media screen and (max-width: 567px) {
@@ -840,9 +840,9 @@ select {
 }
 @media screen and (max-width: 400px) {
   .borderp {
-    margin-top: 3px !important;
-    margin-right: 3px !important;
-    width: 42px !important;
+    margin-top: 2px !important;
+    margin-right: 2px !important;
+    width: 43px !important;
   }
 }
 .pricing-list ul li:after {
