--- a/public/css/styles-3.css
+++ b/public/css/styles-3.css
@@ -198,8 +198,7 @@ blink {
 }
 .port a.butn,
 #jinaHolder,
-#jinaHolder2,
-#invoice-type {
+#jinaHolder2 {
   color: rgb(170, 208, 228) !important;
 }
 #jinaHolder3 {
