--- a/public/css/styles-8.css
+++ b/public/css/styles-8.css
@@ -201,8 +201,7 @@ blink {
 }
 .port a.butn,
 #jinaHolder,
-#jinaHolder2,
-#invoice-type {
+#jinaHolder2 {
   color: rgb(177, 223, 215) !important;
 }
 #jinaHolder3 {
