--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -200,8 +200,7 @@ blink {
 }
 .port a.butn,
 #jinaHolder,
-#jinaHolder2,
-#invoice-type {
+#jinaHolder2 {
   color: rgb(215, 233, 192) !important;
 }
 #jinaHolder3 {
