--- a/public/css/styles-2.css
+++ b/public/css/styles-2.css
@@ -200,8 +200,7 @@ blink {
 }
 .port a.butn,
 #jinaHolder,
-#jinaHolder2,
-#invoice-type {
+#jinaHolder2 {
   color: rgb(171, 226, 252) !important;
 }
 #jinaHolder3 {
