--- a/public/css/styles-4.css
+++ b/public/css/styles-4.css
@@ -199,8 +199,7 @@ blink {
 }
 .port a.butn,
 #jinaHolder,
-#jinaHolder2,
-#invoice-type {
+#jinaHolder2 {
   color: rgb(194, 199, 218) !important;
 }
 #jinaHolder3 {
