--- a/public/css/styles-5.css
+++ b/public/css/styles-5.css
@@ -201,8 +201,7 @@ blink {
 }
 .port a.butn,
 #jinaHolder,
-#jinaHolder2,
-#invoice-type {
+#jinaHolder2 {
   color: rgb(253, 231, 171) !important;
 }
 #jinaHolder3 {
