--- a/public/css/styles-6.css
+++ b/public/css/styles-6.css
@@ -202,8 +202,7 @@ blink {
 }
 .port a.butn,
 #jinaHolder,
-#jinaHolder2,
-#invoice-type {
+#jinaHolder2 {
   color: rgb(239, 228, 198) !important;
 }
 #jinaHolder3 {
